add map reduce note

--- a/content/blog/2019-07-10-gfs-note.md
+++ b/content/blog/2019-07-10-gfs-note.md
@@ -248,7 +248,7 @@ Master 定期和 Chunkserver 通信，检测数据是否损坏，通过有效副
 
 ### 4.4 垃圾回收(Garbage Collection)
 
-惰性回收，
+惰性回收
 
 #### 4.4.1 机制(Mechanism)
 
@@ -382,7 +382,7 @@ GFS 可以很容易的处理
 - 有大量客户端时保障系统整体性能，与 [Lustre] 相同
 - 灾难冗余方案是设计的核心
 - 架构类似 [NASD]，实现重新负载均衡、复制、恢复机制
-- 不改变存储设备的 Model，不同于与 [Minnesota’s GFS] 和 [NASD]
+- 不改变存储设备的 Model，不同于 [Minnesota’s GFS] 和 [NASD]
 - 通过原子的记录追加操作实现了生产者-消费者队列，类似 [River] 的分布式队列
 
 ## 9 结论(CONCLUSIONS)
