--- a/content/blog/2019-07-10-gfs-note.md
+++ b/content/blog/2019-07-10-gfs-note.md
@@ -1,9 +1,14 @@
 ---
 title: "GFS笔记"
+description: GFS是一个适用于大规模可扩展的分布式文件系统，
 date: '2019-07-10'
 tags:
   - papers
   - google
+keywords:
+  - Distributed System
+  - Distributed Storage
+  - Google
 ---
 
 ## 1 介绍(INTRODUCTION)
